--- a/index.html
+++ b/index.html
@@ -16,28 +16,33 @@
                 Tripify
             </h1>
             <h3>
-
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit
             </h3>
             <p>
-
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt beatae praesentium pariatur, quos soluta saepe, consequuntur reiciendis mollitia esse blanditiis animi nemo eos molestiae sapiente eius minus tenetur cupiditate expedita?
             </p>
             <form action="">
                 <div class="input">
                     <label>
                         Email
-                        <input type="text">
+                        <input type="email" name="email">
                     </label>
                 </div>
                 <div class="input">
                     <label>
                         Password
-                        <input type="text">
+                        <input type="password" name="password">
                     </label>
                 </div>
                 <div class="boton">
                     <button>
                         Log in
                     </button>
+                </div>
+                <div class="texto-form">
+                    <p>
+                        Don´t have an account?<strong>Register</strong>
+                    </p>
                 </div>
             </form>
         </section>
